--- a/src/components/fixture/Fixture.css
+++ b/src/components/fixture/Fixture.css
@@ -1,15 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .fixture-area{
     position: absolute;
     top: 225px;
-    left: 58px;
+    left: 100px;
     right: 58px;
     bottom: 100px;
 }
 
-.fixture-font{
+.fixture-header-font{
     font-size: 24px;
     margin: 0px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     font-weight: bold;
     text-align: left;
     color: white;
@@ -20,4 +22,58 @@
     background: linear-gradient(to bottom,#1B1496,#090630);
     border-radius: 8px;
     margin-top: 20px;
+    margin-bottom: 20px;
+    height: 600px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    color: white;
+    text-align: left;
 }
+
+
+.divider {
+    position: relative;      /* Make the container relative for positioning */
+    width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: left;      /* Center the text vertically */
+    justify-content: left;  /* Center the text horizontally */
+    color: white;             /* Ensure text is white */
+    flex-direction: row;
+    
+}
+
+.divider::before {
+    content: '';
+    position: absolute;
+    top: 0;                  /* Position the line at the top */
+    left: 0;
+    width: 100%;
+    height: 2px;             /* The height of the line */
+    background-color: white;
+    opacity: 0.4;
+}
+
+.fixture-font{
+    margin: 5px;
+    margin-bottom: 0px;
+    font-size: 18px;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: bold;
+}
+
+.leauge-logo{
+    width: 30px;
+    height: 30px;
+    margin-bottom: 20px;
+}
+
+.vertical-line{
+    border-left: 2px solid white; /* Thickness and color of the line */
+    opacity: 0.4;
+    height: 50px; /* Height of the vertical line */
+    padding-left: 25px;
+}
+
