--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,5 +1,5 @@
 .logo-size{
-    width: 195px;
+    width: 150px;
     height: 48px; 
 }
 
@@ -18,6 +18,9 @@
     color: black;
     border-radius: 16px;
     transition-duration: 0.6s;
+    font-size: 12px;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: bold;
 }
 
 .btn-nav:hover{
