--- a/src/components/fixture/Fixture.css
+++ b/src/components/fixture/Fixture.css
@@ -60,7 +60,7 @@
 .fixture-font{
     margin: 5px;
     margin-bottom: 0px;
-    font-size: 18px;
+    font-size: 20px;
     font-family: 'Roboto Mono', monospace;
     font-weight: bold;
 }
@@ -112,4 +112,114 @@
     font-size: 12px;
     font-family: 'Roboto Mono', monospace;
     font-weight: bold;
+}
+
+.fixture-button-style{
+    border-radius: 8px;
+    background-color: transparent !important;
+    box-shadow: none; /* Remove the box shadow if any */
+    color: white;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:900i');
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: left;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.cta {
+    display: flex;
+    padding: 10px 25px;
+    text-decoration: none;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 50px;
+    color: white;
+    background: #6225E6;
+    transition: 0.6s;
+    box-shadow: 6px 6px 0 black;
+    transform: skewX(-15deg);
+}
+
+.cta:focus {
+   outline: none; 
+}
+
+.cta:hover {
+    transition: 0.5s;
+    box-shadow: 10px 10px 0 #FBC638;
+}
+
+.cta span:nth-child(2) {
+    transition: 0.5s;
+    margin-right: 0px;
+}
+
+.cta:hover  span:nth-child(2) {
+    transition: 0.5s;
+    margin-right: 80px;
+}
+
+  span {
+    transform: skewX(15deg) 
+  }
+
+  span:nth-child(2) {
+    width: 20px;
+    margin-left: 30px;
+    position: relative;
+    top: 12%;
+  }
+  
+/**************SVG****************/
+
+path.one {
+    transition: 0.4s;
+    transform: translateX(-60%);
+}
+
+path.two {
+    transition: 0.5s;
+    transform: translateX(-30%);
+}
+
+.cta:hover path.three {
+    animation: color_anim 1s infinite 0.2s;
+}
+
+.cta:hover path.one {
+    transform: translateX(0%);
+    animation: color_anim 1s infinite 0.6s;
+}
+
+.cta:hover path.two {
+    transform: translateX(0%);
+    animation: color_anim 1s infinite 0.4s;
+}
+
+/* SVG animations */
+
+@keyframes color_anim {
+    0% {
+        fill: white;
+    }
+    50% {
+        fill: #FBC638;
+    }
+    100% {
+        fill: white;
+    }
 }
